# behest

./: .gitignore  .gitlab-ci.yml  Makefile  README.md
agent/: Cargo.toml  agent.example.toml  dev.behest.agent.plist
agent/src/: broker.rs  config.rs  identity.rs  main.rs  notifier.rs  tray.rs
sdk/: behest.go  behest_test.go  example_test.go  go.mod
sdk/cmd/behest-smoke/: main.go
spec/: protocol.md
worker/: notifiers.example.json  package-lock.json  package.json  setup.sh  wrangler.toml
worker/src/: index.ts
