[package]
name = "behest-agent"
version = "0.1.0"
edition = "2021"
description = "behest credential relay agent — system tray daemon"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "net", "sync"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto: NaCl box (X25519 + XSalsa20-Poly1305)
crypto_box = "0.9"
rand = "0.8"

# System tray + event loop
tray-icon = "0.19"
tao = { version = "0.33", features = ["rwh_06"] }

# Desktop notifications
notify-rust = "4"

# Error handling
anyhow = "1"

# CLI / config
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64
base64 = "0.22"
