[package]
name = "behest-agent"
version = "0.1.0"
edition = "2021"
description = "behest credential relay agent — system tray daemon"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "net", "sync"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
crypto_box = "0.9"       # NaCl box (X25519 + XSalsa20-Poly1305)
ed25519-dalek = { version = "2", features = ["rand_core"] }  # Agent identity signing
rand = "0.8"
base64 = "0.22"

# System tray + event loop
tray-icon = "0.19"
tao = { version = "0.33", features = ["rwh_06"] }

# Desktop notifications
notify-rust = "4"
hostname = "0.4"

# macOS Keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dependencies.anyhow]
version = "1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.dirs]
version = "6"

[dependencies.toml]
version = "0.8"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
